--- a/index.html
+++ b/index.html
@@ -5,100 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=l, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
     <body>
       <header>
-       <nav>
-         <a href="/">
-            WebStudio
-         </a>
-        <ul>
-            <li><a href="#">Студія</a></li>
-            <li><a href="#">Портфоліо</a></li>
-            <li><a href="#">Контакти</a></li>
+       <nav class="page-navigation">
+         <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+        <ul class="menu-list list">
+            <li class="menu-item"><a class="menu-link link current" href="#">Студія</a></li>
+            <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="menu-item"><a class="menu-link link" href="#">Контакти</a></li>
         </ul>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11 </a></li>
+        <ul class="contact list">
+            <li class="contacts-item"><a class="header-contacts-email link" href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+            <li class="contacts-item"><a class="header-contacts-number link" href="tel:+380961111111">+38 096 111 11 11 </a></li>
         </ul>
        </nav>
       </header>             
         <main>
-         <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+         <section id="stydio" class="baner">
+            <h1 class="baner-text">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="baner-modal-button">Замовити послугу</button>
         </section>    
-        <section>
-            <h2>Наші особливості</h2>
-         <ul>
-            <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <section id="benefits" class="benefits">
+            <h2 class="benefits-caption visually-hidden">Наші особливості</h2>
+         <ul class="benefits-list list">
+            <li class="benefits-list-item">
+                <h3 class="benefits-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <li class="benefits-list-item">
+                <h3 class="benefits-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <li class="benefits-list-item">
+                <h3 class="benefits-subtitle">ПЛАНУВАННЯ</h3>
+                <p class="benefits-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <li class="benefits-list-item">
+                <h3 class="benefits-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>   
         </section>
-        <section>
-           <h2>Чим ми займаємося</h2>
-    <ul>
-        <li>
+        <section class="about-us">
+           <h2 class="about-caption">Чим ми займаємося</h2>
+    <ul class="about-list list">
+        <li class="about-img">
             <img src="./images/img1.jpg" alt="фото1" width="370" height="294" />
         </li>
-        <li>
+        <li class="about-img">
             <img src="./images/img2.jpg" alt="фото2" width="370" height="294" />
         </li>
-        <li>
+        <li class="about-img">
             <img src="./images/img3.jpg" alt="фото3" width="370" height="294" />
         </li>
     </ul> 
         </section>   
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
+      <section class="our-team">
+        <h2 class="our-team-caption">Наша команда</h2>
+        <ul class="workers-list list">
+            <li class="workers-item">
                 <img src="./images/img4.jpg" alt="фото Ігора Дем'яненко" width="270" />
-            <h3> Ігор Дем'яненко</h3>
-            <p> Product Designer </p>
+            <h3 class="workers-name"> Ігор Дем'яненко</h3>
+            <p class="workers-position"> Product Designer </p>
             </li> 
-            <li>
+            <li class="workers-item">
                 <img src="./images/img5.jpg" alt="фото Ольги Рєпіної" width="270" />
-                <h3> Ольга Рєпіна</h3>
-                <p> Frontend Developer </p>
+                <h3 class="workers-name"> Ольга Рєпіна</h3>
+                <p class="workers-position"> Frontend Developer </p>
             </li>
-            <li>
+            <li class="workers-item">
                 <img src="./images/img6.jpg" alt="фото Миколи Тарасюка" width="270" />
-                <h3> Микола Тарасов</h3>
-                <p> Marketing </p>
+                <h3 class="workers-name"> Микола Тарасов</h3>
+                <p class="workers-position"> Marketing </p>
             </li>
-            <li>
+            <li class="workers-item">
                 <img src="./images/img7.jpg" alt="фото Михайла Єрмакова" width="270" />
-                <h3> Михайло Єрмаков</h3>
-                <p> UI Designer </p>
+                <h3 class="workers-name"> Михайло Єрмаков</h3>
+                <p class="workers-position"> UI Designer </p>
             </li>
         </ul>
       </section>    
         </main>
-              <footer>
-        <a href="/">
-        WebStudio
-        </a>
-        <address>
-            <ul>
-                <li> <a href="https://goo.gl/maps/6SvzSpmjhujq6x5f7" target="_blank" rel="noreferrer noopener nofollow" >м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li> <a href="tel:+380961111111"> +38 096 111 11 11</a> </li>
+              <footer class="footer">
+        <a class="logo-footer link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+        <address class="address">
+            <ul class="address-list list">
+                <li class="address-list-item"> <a class="adress-map link" href="https://goo.gl/maps/6SvzSpmjhujq6x5f7" target="_blank" rel="noreferrer noopener nofollow" >м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="adress-list-item"> <a class="footer-contacts-email link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li class="adress-list-item"> <a class="footer-contacts-number link" href="tel:+380961111111"> +38 096 111 11 11</a> </li>
             </ul>
         </address>
             </footer>
