--- a/portfolio.html
+++ b/portfolio.html
@@ -5,93 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="/">
-                WebStudio
-            </a>
-            <ul>
-                <li><a href="#">Студія</a></li>
-                <li><a href="#">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
+        <nav class="page-navigation">
+            <a class="logo link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <ul class="menu-list list">
+                <li class="menu-item"><a class="menu link" href="./index.html">Студія</a></li>
+                <li class="menu-item"><a class="menu link current" href="/portfolio.html">Портфоліо</a></li>
+                <li class="menu-item"><a class="menu link link" href="#">Контакти</a></li>
             </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11 </a></li>
+            <ul class="contacts list">
+                <li class="contacts-item"><a class="header-contacts-email link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-item"><a class="header-contacts-number-link" href="tel:+380961111111">+38 096 111 11 11 </a></li>
             </ul>
         </nav>
     </header>
-    <main>
-     <section>
-            <h1>Портфоліо</h1>
-            <ul>
-              <li><button type="button">Усі</button></li>
-              <li><button type="button">Веб-сайти</button></li>
-              <li><button type="button">Додатки</button></li>
-              <li><button type="button">Дизайн</button></li>
-              <li><button type="button">Маркетинг</button></li>
+    <main class="main">
+     <section class="servises">
+            <h1 class="servises-heading visually-hidden">Портфоліо</h1>
+            <ul class="servises-nav-list list">
+              <li class="servises-nav-item"><button type="button" class="servises-nav-button">Усі</button></li>
+              <li class="servises-nav-item"><button type="button" class="servises-nav-button">Веб-сайти</button></li>
+              <li class="servises-nav-item"><button type="button" class="servises-nav-button">Додатки</button></li>
+              <li class="servises-nav-item"><button type="button" class="servises-nav-button">Дизайн</button></li>
+              <li class="servises-nav-item"><button type="button" class="servises-nav-button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="servises-list list">
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport1.jpg" alt="ноутбук" width="370" height="294">
+                <h2 class="servises-title">Технокряк</h2>
+                <p class="servises-section">Веб-сайт</p>
+             </li class="servises-item">
              <li>
-                <img src="./portfolio.images/imgport1.jpg" alt="ноутбук" width="370" height="294">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <img class="servises-img" src="./portfolio.images/imgport2.jpg" alt="баскетбол" width="370" height="294">
+                <h2 class="servises-title">Постер New Orlean vs Golden Star</h2>
+                <p class="servises-section">Дизайн</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport2.jpg" alt="баскетбол" width="370" height="294">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport3.jpg" alt="логотип ресторану" width="370" height="294">
+                <h2 class="servises-title">Ресторан Seafood</h2>
+                <p class="servises-section">Додаток</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport3.jpg" alt="логотип ресторану" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
-                <p>Додаток</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport4.jpg" alt="навушники" width="370" height="294">
+                <h2 class="servises-title">Проєкт Prime</h2>
+                <p class="servises-section">Маркетинг</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport4.jpg" alt="навушники" width="370" height="294">
-                <h2>Проєкт Prime</h2>
-                <p>Маркетинг</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport5.jpg" alt="коробки" width="370" height="294">
+                <h2 class="servises-title">Проєкт Boxes</h2>
+                <p class="servises-section">Додаток</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport5.jpg" alt="коробки" width="370" height="294">
-                <h2>Проєкт Boxes</h2>
-                <p>Додаток</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport6.jpg" alt="натхнення немає кордонів" width="370" height="294">
+                <h2 class="servises-title">Inspiration has no Borders</h2>
+                <p class="servises-section">Веб-сайт</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport6.jpg" alt="натхнення немає кордонів" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport7.jpg" alt="дизайн журнала" width="370" height="294">
+                <h2 class="servises-title">Видання Limited Edition</h2>
+                <p class="servises-section">Дизайн</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport7.jpg" alt="дизайн журнала" width="370" height="294">
-                <h2>Видання Limited Edition</h2>
-                <p>Дизайн</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport8.jpg" alt="бірка з логотипом" width="370" height="294">
+                <h2 class="servises-title">Проєкт LAB</h2>
+                <p class="servises-section">Маркетинг</p>
              </li>
-             <li>
-                <img src="./portfolio.images/imgport8.jpg" alt="бірка з логотипом" width="370" height="294">
-                <h2>Проєкт LAB</h2>
-                <p>Маркетинг</p>
-             </li>
-             <li>
-                <img src="./portfolio.images/imgport8.jpg" alt="робочий процес" width="370" height="294">
-                <h2>Growing Business</h2>
-                <p>Додаток</p>
+             <li class="servises-item">
+                <img class="servises-img" src="./portfolio.images/imgport9.jpg" alt="робочий процес" width="370" height="294">
+                <h2 class="servises-title">Growing Business</h2>
+                <p class="servises-section">Додаток</p>
              </li>   
             </ul>
         </section>   
     </main>    
-    <footer>
-        <a href="/">
-            WebStudio
-            </a>
-            <address>
-                <ul>
-                    <li> <a href="https://goo.gl/maps/6SvzSpmjhujq6x5f7" target="_blank" rel="noreferrer noopener nofollow" >м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                    <li> <a href="tel:+380961111111"> +38 096 111 11 11</a> </li>
+    <footer class="footer">
+        <a class="logo-footer link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <address class="adress">
+                <ul class="adress-list list">
+                    <li class="adress-item">
+                     <a class="address-map link" 
+                     href="https://goo.gl/maps/6SvzSpmjhujq6x5f7"
+                      target="_blank" rel="noreferrer noopener nofollow" >м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li class="adress-item"><a class="footer-contacts-email" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                    <li class="adress-item"><a class="footer-contacts-number link" href="tel:+380961111111"> +38 096 111 11 11</a> </li>
                 </ul>
             </address>
     </footer>
